@@ -1,0 +1,10 @@
+<?php
+class Vpc_Columns_ExtConfig extends Vpc_Abstract_List_ExtConfigListEditButton
+{
+    protected function _getConfig()
+    {
+        $ret = parent::_getConfig();
+        $ret['list']['controllerUrl'] = $this->getControllerUrl();
+        return $ret;
+    }
+}
