@@ -23,6 +23,7 @@ möglicherweise nicht kompatible Änderungen:
 - frontControllerClass MUSS in application/config.ini angegeben werden
 - Tags in Seitenbaum gibts nicht mehr (kein Vps_Component_Acl->allowTag())
 - aclClass MUSS in application/config.ini angegeben werden
+- Columns admin ist jetzt keine Form mehr sondern ein Grid
 
 == 1.10 ==
 Erstellt: 09.06.10
